--- a/src/Components/AlbumList/AlbumList.module.css
+++ b/src/Components/AlbumList/AlbumList.module.css
@@ -62,7 +62,8 @@
   margin: 1rem;
   flex-basis: 25%;
   padding: 1rem;
-  text-align: left;
+  /* text-align: left; */
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
@@ -78,7 +79,7 @@
 }
 
 .card h3 {
-  margin: 0 0 0.3rem 0;
+  margin: 0.5rem 0;
   font-size: 1rem;
 }
 
