--- a/src/Components/AlbumList/AlbumList.module.css
+++ b/src/Components/AlbumList/AlbumList.module.css
@@ -1,5 +1,6 @@
 .main {
-  padding: 5rem 0;
+  /* padding: 5rem 0; */
+  padding: 3rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -49,7 +50,7 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 1000px;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 .img {
@@ -94,10 +95,6 @@
   font-size: 0.75rem;
 }
 
-.logo {
-  height: 1em;
-}
-
 @media (max-width: 600px) {
   .grid {
     width: 100%;
@@ -113,10 +110,3 @@
     flex-basis: 30%;
   }
 }
-
-/* @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-} */
