--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -1,30 +1,22 @@
-.nav {
-  background-color: #0070f3;
+.header {
   width: 100%;
-  height: 64px;
-  top: 0;
-  left: 0;
-  transition: 0.5s;
-}
-
-.div {
-  width: 98%;
-  margin: 4px 32px;
+  height: 100px;
+  border-bottom: 1px solid #eaeaea;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  flex-wrap: no-wrap;
 }
 
-.a {
-  margin-top: 16px;
-  color: white;
-  text-decoration: none;
-  font-size: 0.8rem;
-  letter-spacing: 0.028rem;
-  transition: 0.5s;
+.header img {
+  margin-left: 0.5rem;
 }
 
-.a:hover {
-  text-decoration: underline;
+.header a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  height: 1em;
 }
