--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,6 +16,15 @@
   align-items: center;
 }
 
+.album {
+  padding: 5rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: flex-start;
+}
+
 .footer {
   width: 100%;
   height: 100px;
