--- a/src/Components/AlbumHeader/AlbumHeader.module.css
+++ b/src/Components/AlbumHeader/AlbumHeader.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   flex-wrap: nowrap;
   padding: 1rem;
+  margin-top: 4rem;
   min-width: 780px;
   min-height: 300px;
   margin-bottom: 16px;
