Improved routing and css

--- a/src/Components/SongCard/SongCard.module.css
+++ b/src/Components/SongCard/SongCard.module.css
@@ -86,6 +86,7 @@
   background-position: center;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .card button:hover {
@@ -110,6 +111,7 @@
 .card h3 {
   margin: 0.5rem 0;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 .card h3:hover {
