--- a/src/Components/AlbumList/AlbumList.module.css
+++ b/src/Components/AlbumList/AlbumList.module.css
@@ -62,7 +62,8 @@
 .card {
   margin: 1rem;
   /* flex-basis: 25%; */
-  flex-basis: 45%;
+  /* flex-basis: 45%; */
+  flex-basis: 25%;
   padding: 1rem;
   /* text-align: left; */
   text-align: center;
