improved all css mobile-desktop ui implementing

--- a/src/Components/AlbumHeader/AlbumHeader.module.css
+++ b/src/Components/AlbumHeader/AlbumHeader.module.css
@@ -1,22 +1,34 @@
 .card {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: nowrap;
-  padding: 1rem;
+  /* justify-content: center; */
+  padding: 0.5rem;
+  align-items: flex-start;
   margin-top: 4rem;
-  min-width: 780px;
-  min-height: 300px;
+  border: 1px solid #eaeaea;
+  border-radius: 4px;
+}
+
+.card img {
+  width: 45%;
+}
+
+.card div {
+  width: 45%;
+  margin-left: 12px;
+}
+
+/* .card {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  margin-top: 4rem;
   margin-bottom: 16px;
   border: 1px solid #eaeaea;
-  border-radius: 6px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  border-radius: 4px;
 }
 
 .card div {
   display: flex;
-  min-height: 300px;
-  width: 100%;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -30,20 +42,29 @@
 }
 
 .card img {
-  width: 40%;
-  height: 40%;
-  border-radius: 6px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
 }
 
-/* @media (max-width: 600px) {
+@media only screen and (min-width: 300px) {
   .card {
-    min-width: 300px;
     flex-direction: column;
-    width: 300px;
-    height: 300px;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .card {
+    display: flex;
+    justify-content: space-between;
+    background-color: blue !important;
   }
   .card img {
-    width: 100%;
-    height: 100%;
+    display: block;
+    width: 50% !important;
+  }
+  .card div {
+    width: 50%;
   }
 } */
