--- a/src/Components/SongCard/SongCard.module.css
+++ b/src/Components/SongCard/SongCard.module.css
@@ -9,7 +9,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #def2f1;
   text-decoration: none;
 }
 
@@ -56,70 +56,81 @@
 .img {
   width: 100%;
   height: 100%;
-  border-radius: 6px;
+  border-radius: 4px;
 }
 
 .card {
   margin: 1rem;
-  flex-basis: 25%;
-  padding: 1rem;
+  flex-basis: 27%;
+  padding: 0.6rem;
   /* text-align: left; */
   text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
-  border-radius: 6px;
+  border-radius: 4px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  /* opacity: 1; */
+  opacity: 0.9;
+  position: relative;
+}
+
+.card .overlay button {
+  width: 100%;
+  background-size: 40px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url('/images/icons/play-button-arrowhead.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+  border-color: transparent;
+  height: 100%;
+  cursor: pointer;
+}
+
+.overlay {
   position: relative;
 }
 
 /* TODO put button in a div frame give width/height etc. */
-.card button {
-  opacity: 0;
-  width: 50%;
-  height: 50%;
-  top: 35px;
-  position: absolute;
-  background-image: url('/images/icons/icon-black-play.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.card button:hover {
-  opacity: 1;
-  transition: opacity 0.25s ease-in-out 0s;
-}
 
 .card:hover,
 .card:focus,
 .card:active {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
-  padding: 0;
-  opacity: 0.7;
-  transition: padding 0.25s ease-in-out 0s;
-  color: #0070f3;
-  border-color: #0070f3;
+  align-items: center; */
+  /* padding: 0; */
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out 0s;
+  border-color: #def2f1;
+}
+
+.card:hover > .overlay {
+  transform: scale(1.05);
+  transition: transform 0.25s ease-in-out 0s;
 }
 
 .card h3 {
+  margin: 0.5rem 0;
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  opacity: 0.7;
+  letter-spacing: 0.05rem;
+  cursor: pointer;
+}
+
+.card h2 {
+  height: 42px;
   margin: 0.5rem 0;
   font-size: 1rem;
   cursor: pointer;
 }
 
-.card h3:hover {
-  font-size: 1.2rem;
-  transition: font-size 0.25s ease-in-out 0s;
-}
-
 .card h6 {
+  height: 32px;
   font-weight: 200;
   margin: 2px;
 }
@@ -131,7 +142,14 @@
 
 .card span {
   margin: 0;
+  display: inline-block;
+  padding: 8px 20px;
   font-size: 0.75rem;
+  background-size: 12px;
+  background-image: url('/images/icons/icon-black-copyright.svg');
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-color: transparent;
 }
 
 .audio {
