--- a/src/Components/AlbumList/AlbumList.module.css
+++ b/src/Components/AlbumList/AlbumList.module.css
@@ -61,11 +61,8 @@
 
 .card {
   margin: 1rem;
-  /* flex-basis: 25%; */
-  /* flex-basis: 45%; */
-  flex-basis: 25%;
+  flex-basis: 27%;
   padding: 1rem;
-  /* text-align: left; */
   text-align: center;
   color: inherit;
   text-decoration: none;
@@ -84,6 +81,7 @@
 .card h3 {
   margin: 0.5rem 0;
   font-size: 1rem;
+  height: 32px;
 }
 
 .card p {
