--- a/src/Components/SearchBar/SearchBar.module.css
+++ b/src/Components/SearchBar/SearchBar.module.css
@@ -1,7 +1,7 @@
 .form {
   width: 64%;
   position: absolute;
-  top: 20%;
+  top: 200px;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
