--- a/src/Components/SongList/SongList.module.css
+++ b/src/Components/SongList/SongList.module.css
@@ -3,55 +3,57 @@
   flex: 1;
   flex-direction: column;
   flex-wrap: nowrap;
-  min-width: 780px;
   margin-bottom: 32px;
-  /* background-color: red; */
-  /* width: 800px; */
+  width: 100%;
 }
 
 .card {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-  /* justify-content: space-between; */
+  text-align: left;
+  justify-content: space-between;
   padding: 0.5rem 0.75rem;
-  text-align: center;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
   border: 1px solid #eaeaea;
   border-radius: 6px;
   transition: color 0.15s ease, border-color 0.15s ease;
+  position: relative;
+}
+
+.left {
+  display: flex;
+  align-items: center;
+  line-height: 0;
+  margin-left: 12px;
+}
+
+.left p {
+  margin-left: 12px;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80px;
+  font-size: 16px;
+  line-height: 0;
+  margin-right: 12px;
 }
 
 .card button {
-  background-image: url('/images/icons/icon-black-play.svg');
+  background-image: url('/images/icons/play-button-arrowhead.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-color: transparent;
   margin-left: 0.5rem;
   font-size: 10px;
-  width: 48px;
-  height: 48px;
+  width: 24px;
+  height: 24px;
   border: none;
-}
-
-.card button:hover,
-.card button:focus,
-.card button:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card p {
-  margin: 0.8rem 1rem;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.card a {
-  margin-left: auto;
-  font-size: 0.75rem;
-  font-weight: bold;
+  cursor: pointer;
 }
 
 .audio {
@@ -63,18 +65,9 @@
   bottom: 0;
 }
 
-@media (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   .list {
-    min-width: 350px;
-    /* background-color: blue; */
-  }
-  .card p {
-    font-size: 1rem;
-    line-height: 1.5;
-  }
-  .card a {
-    margin-left: auto;
-    font-size: 0.45rem;
-    font-weight: bold;
+    width: 100% !important;
+    margin: 0 auto !important;
   }
 }
