--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 90%;
+  margin: 20px auto 0;
 }
 
 .main {
@@ -16,14 +18,14 @@
   align-items: center;
 }
 
-.album {
+/* .album {
   padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: flex-start;
-}
+} */
 
 .footer {
   width: 100%;
@@ -128,5 +130,12 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .container {
+    width: 80% !important;
+    margin: 0 auto !important;
   }
 }
