--- a/src/Components/AlbumHeader/AlbumHeader.module.css
+++ b/src/Components/AlbumHeader/AlbumHeader.module.css
@@ -1,15 +1,15 @@
 .card {
   display: flex;
-  /* justify-content: center; */
-  padding: 0.5rem;
-  align-items: flex-start;
-  margin-top: 4rem;
   border: 1px solid #eaeaea;
+  margin: 1rem;
   border-radius: 4px;
+  padding: 0.5rem;
+  width: 90%;
 }
 
 .card img {
-  width: 45%;
+  width: 40%;
+  border-radius: 4px;
 }
 
 .card div {
@@ -17,54 +17,24 @@
   margin-left: 12px;
 }
 
-/* .card {
-  display: flex;
-  align-items: center;
-  padding: 0.5rem;
-  margin-top: 4rem;
-  margin-bottom: 16px;
-  border: 1px solid #eaeaea;
-  border-radius: 4px;
-}
-
-.card div {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin: 0 24px;
-}
-
 .card p {
   margin: 10px 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  font-size: 1rem;
+  text-transform: uppercase;
 }
 
-.card img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
+.artistName {
+  cursor: pointer;
+  text-transform: uppercase;
+  opacity: 0.8;
+  letter-spacing: 0.07rem;
 }
 
-@media only screen and (min-width: 300px) {
+@media (max-width: 700px) {
   .card {
     flex-direction: column;
   }
-}
-
-@media only screen and (min-width: 700px) {
-  .card {
-    display: flex;
-    justify-content: space-between;
-    background-color: blue !important;
-  }
   .card img {
-    display: block;
-    width: 50% !important;
+    width: 100%;
   }
-  .card div {
-    width: 50%;
-  }
-} */
+}
