--- a/src/Components/AlbumList/AlbumList.module.css
+++ b/src/Components/AlbumList/AlbumList.module.css
@@ -1,56 +1,8 @@
-.main {
-  /* padding: 5rem 0; */
-  padding: 3rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
 .grid {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 1000px;
-  margin-top: 4rem;
 }
 
 .img {
@@ -62,7 +14,7 @@
 .card {
   margin: 1rem;
   flex-basis: 27%;
-  padding: 1rem;
+  padding: 0.5rem;
   text-align: center;
   color: inherit;
   text-decoration: none;
@@ -71,11 +23,9 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.card:hover > img {
+  transform: scale(1.08);
+  transition: transform 0.25s ease-in-out 0s;
 }
 
 .card h3 {
@@ -84,15 +34,14 @@
   height: 32px;
 }
 
+.card h3:hover {
+  text-decoration: underline;
+}
+
 .card p {
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
-}
-
-.card span {
-  margin: 0;
-  font-size: 0.75rem;
 }
 
 @media (max-width: 600px) {
