--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2rem;
 }
 
 .header img {
@@ -15,6 +16,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1rem;
+  opacity: 1;
+  letter-spacing: 0.3rem;
+  cursor: pointer;
 }
 
 .logo {
