--- a/src/Components/SearchBar/SearchBar.module.css
+++ b/src/Components/SearchBar/SearchBar.module.css
@@ -1,12 +1,10 @@
 .form {
-  width: 64%;
-  position: absolute;
-  top: 200px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 90%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  position: relative;
+  /* margin-bottom: 2rem; */
 }
 
 .button {
@@ -18,7 +16,7 @@
   height: 36px;
   position: absolute;
   right: 10px;
-  top: 5px;
+  top: 6px;
   border: none;
   background-color: transparent;
 }
@@ -26,6 +24,12 @@
 .input {
   width: 100%;
   height: 50px;
-  border-radius: 30px;
-  text-indent: 10px;
+  border-radius: 4px;
+  text-indent: 12px;
+  border-color: #eaeaea;
+}
+
+.input:focus {
+  border-color: transparent;
+  background-color: transparent;
 }
