--- a/src/Components/SongCard/SongCard.module.css
+++ b/src/Components/SongCard/SongCard.module.css
@@ -1,56 +1,8 @@
-.main {
-  /* padding: 5rem 0; */
-  padding: 3rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #def2f1;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
 .grid {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 1000px;
-  margin-top: 4rem;
 }
 
 .img {
@@ -87,6 +39,7 @@
   border-color: transparent;
   height: 100%;
   cursor: pointer;
+  opacity: 0;
 }
 
 .overlay {
@@ -98,19 +51,27 @@
 .card:hover,
 .card:focus,
 .card:active {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center; */
-  /* padding: 0; */
   opacity: 1;
   transition: opacity 0.25s ease-in-out 0s;
   border-color: #def2f1;
 }
 
-.card:hover > .overlay {
-  transform: scale(1.05);
+/* .card:hover > .overlay {
+  transform: scale(1.08);
   transition: transform 0.25s ease-in-out 0s;
+} */
+
+/* .card:hover > .overlay button {
+  opacity: 1;
+} */
+
+.card .overlay:hover {
+  transform: scale(1.08);
+  transition: transform 0.25s ease-in-out 0s;
+}
+
+.card .overlay button:hover {
+  opacity: 1;
 }
 
 .card h3 {
@@ -127,6 +88,12 @@
   margin: 0.5rem 0;
   font-size: 1rem;
   cursor: pointer;
+}
+
+.card h2:hover,
+.card h3:hover,
+.card span:hover {
+  text-decoration: underline;
 }
 
 .card h6 {
