--- a/src/Components/AlbumHeader/AlbumHeader.module.css
+++ b/src/Components/AlbumHeader/AlbumHeader.module.css
@@ -13,7 +13,7 @@
 }
 
 .card div {
-  width: 45%;
+  width: 100%;
   margin-left: 12px;
 }
 
@@ -33,6 +33,10 @@
 @media (max-width: 700px) {
   .card {
     flex-direction: column;
+    justify-content: center;
+  }
+  .card p {
+    width: 100%;
   }
   .card img {
     width: 100%;
