--- a/src/Components/SongList/SongList.module.css
+++ b/src/Components/SongList/SongList.module.css
@@ -36,8 +36,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 80px;
-  font-size: 16px;
+  width: 60px;
+  font-size: 12px;
   line-height: 0;
   margin-right: 12px;
 }
@@ -65,9 +65,16 @@
   bottom: 0;
 }
 
-/* @media only screen and (min-width: 600px) {
-  .list {
-    width: 100% !important;
-    margin: 0 auto !important;
+@media only screen and (max-width: 375px) {
+  .left {
+    font-size: 10px;
+    margin-left: 2px;
   }
-} */
+  .left p {
+    margin-left: 6px;
+  }
+
+  .right {
+    font-size: 10px;
+  }
+}
