--- a/src/Components/SongList/SongList.module.css
+++ b/src/Components/SongList/SongList.module.css
@@ -25,12 +25,23 @@
   display: flex;
   align-items: center;
   line-height: 0;
-  margin-left: 12px;
+  margin-left: 14px;
 }
 
 .left p {
   margin-left: 12px;
 }
+
+.download {
+  position: absolute;
+  right: 2px;
+}
+
+/* .download:hover > .right {
+  background-color: red;
+  margin-right: 0;
+  transition: margin-right 0.45s ease, margin-right 0.15s ease;
+} */
 
 .right {
   display: flex;
@@ -39,7 +50,7 @@
   width: 60px;
   font-size: 12px;
   line-height: 0;
-  margin-right: 12px;
+  margin-right: 14px;
 }
 
 .card button {
@@ -66,9 +77,16 @@
 }
 
 @media only screen and (max-width: 375px) {
+  .card {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
   .left {
     font-size: 10px;
-    margin-left: 2px;
+    margin-left: 0px;
+    margin-bottom: 1rem;
   }
   .left p {
     margin-left: 6px;
@@ -76,5 +94,10 @@
 
   .right {
     font-size: 10px;
+    margin-left: 12px;
+  }
+
+  .download {
+    right: 6px;
   }
 }
