--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,6 +18,14 @@
   align-items: center;
 }
 
+.noresult {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .title {
   margin: 0;
   line-height: 1.15;
