--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -66,3 +66,19 @@
     margin: 0 auto !important;
   }
 }
+
+/* Light mode */
+@media (prefers-color-scheme: light) {
+  .element {
+    background: white;
+    color: black;
+  }
+}
+
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+  .element {
+    background: black;
+    color: white;
+  }
+}
