--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -69,7 +69,7 @@
 
 /* Light mode */
 @media (prefers-color-scheme: light) {
-  .element {
+  .container {
     background: white;
     color: black;
   }
@@ -77,7 +77,7 @@
 
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
-  .element {
+  .container {
     background: black;
     color: white;
   }
