--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -78,7 +78,7 @@
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
   .container {
-    background: black;
-    color: white;
+    background: rgb(39, 39, 39);
+    color: rgb(194, 194, 194);
   }
 }
